# capston

./: .gitignore  .tmp_analyze_page_elements.js  ADAPTIVE_SCHEDULER_SUMMARY.md  AGENTS.md  CODE_REVIEW.md  GAIA_PROJECT_OVERVIEW.md  METRICS_README.md  PORTFOLIO_RUN_LOG.md  PORTFOLIO_SKELETON.md  PROJECT.md  PR_DESCRIPTION.md  QA_AGENT_IMPLEMENTATION.md  README.md  ROADMAP.md  TRAIN_UI_DETECTOR.md  VERIFICATION_REPORT.md  audit.json  backup_local_work_2026-05-20.patch  gaia_vs_human_backup.patch  generate_test_report.py  google_vision_test.py  ground_truth.json  hellokiju  measure_metrics.py  pyproject.toml  run_auto_test.py  run_fix_test.py  run_infinite_test.py  run_local_test.py  setup_vision.sh  start_qa_agent.sh  test_automation.py  test_baekjoon.py  test_baekjoon_exploratory.py  test_hover_menu.py  test_icr.sh  test_icr_simple.sh  test_llm_action_example.json  test_metrics_login.json  test_metrics_result.json  (+4 more)
.github/: failure-comment-template.md
.playwright-cli/: page-2026-02-19T04-05-21-769Z.yml  page-2026-02-19T04-05-28-753Z.yml  page-2026-02-19T04-05-41-528Z.yml
artifacts/: llm_cache.json  openclaw_parity_checklist_2026-02-22.md  tmp_capstone_flow.json
desktop_app/: README.md  pyproject.toml
desktop_app/app/: main.py
desktop_app/app/core/: controller.py
desktop_app/app/services/: backend_bridge.py  pdf_service.py
desktop_app/app/system/: input_controller.py
desktop_app/app/ui/: main_window.py
desktop_app/app/workers/: playwright_worker.py
docs/: MIDTERM_PRESENTATION.md
examples/: sample_plan_bundle.json
gaia-battle-web/: .env.example  (+5 more)
(+1391 files in other folders)
