[project]
name = "qa-automation-desktop"
version = "0.1.0"
description = "PyQt-based desktop client for QA automation"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "PyAutoGUI>=0.9",
    "pygetwindow>=0.0.9",
    "playwright>=1.45",
    "requests>=2.31",
    "PyPDF2>=3.0",
    "python-multipart>=0.0.6",
    "openai>=1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyinstaller]
# Placeholder; actual spec file will be added during the packaging phase.
entry-point = "app/main.py"
